# pyscreenshot

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
pyscreenshot/: __init__.py
pyscreenshot/cli/: grab.py  print_backend_version.py
pyscreenshot/plugins/: __init__.py  gdk3pixbuf.py  gnome_dbus.py  imagemagick.py  kwin_dbus.py  mac_screencapture.py  qt4grabwindow.py  qt5grabwindow.py
