[tool.poetry]
name = "rpaframework-screenshot"
version = "0.2.0"
description = "Fork of pyscreenshot for RPA use"
authors = [
	"RPA Framework <rpafw@robocorp.com>",
]
license = "Apache-2.0"
readme = "README.rst"

homepage = "https://rpaframework.org/"
documentation = "https://rpaframework.org/"
repository = "https://github.com/robocorp/rpaframework-screenshot"

keywords = ["robotframework", "rpa", "automation"]

classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Development Status :: 3 - Alpha",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Libraries",
	"Framework :: Robot Framework :: Library",
	"Framework :: Robot Framework",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
]

packages = [
	{ include = "pyscreenshot"}
]

[tool.poetry.dependencies]
python = "^3.6"
robotframework = "^3.1.2"
pillow = "^7.0.0"


[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7.9"
pylint = "^2.4.4"
pytest = "^5.2"
sphinx = "^2.3.1"
sphinx_rtd_theme = "^0.4.3"
robotframeworklexer = "^1.1"
sphinx-jekyll-builder = "^0.3.0"


[tool.black]
target-version = ["py36", "py37", "py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
